@@ -61,7 +61,7 @@ public class Tracker {
         String[] tokens = s.split(" ");
         ArrayList<String> args = new ArrayList<String>(Arrays.asList(tokens));
 
-        switch (args.getFirst().toLowerCase()) {
+        switch (args.get(0).toLowerCase()) {
             case "list":
                 listTasks();
                 break;
@@ -70,8 +70,10 @@ public class Tracker {
                     int taskIndex = parseInt(tokens[1]) - 1;
                     Task t = tasks.get(taskIndex);
                     t.mark(true, taskIndex);
-                } catch(NumberFormatException | IndexOutOfBoundsException e) {
+                } catch(NumberFormatException e) {
                     System.out.println("Usage: mark <taskNumber>");
+                } catch(IndexOutOfBoundsException e) {
+                    System.out.println("Hey you don't have that task!");
                 }
                 break;
             case "unmark":
@@ -79,19 +81,34 @@ public class Tracker {
                     int taskIndex = parseInt(tokens[1]) - 1;
                     Task t = tasks.get(taskIndex);
                     t.mark(false, taskIndex);
-                } catch(NumberFormatException | IndexOutOfBoundsException e) {
+                } catch(NumberFormatException e) {
                     System.out.println("Usage: mark <taskNumber>");
+                } catch(IndexOutOfBoundsException e) {
+                    System.out.println("Calm down! You don't have THAT many tasks!");
                 }
                 break;
             case "todo":
-                // Can we get the class itself to perform regex?
-                addTask(Todo.extractDetails(s));
+                // it is possible to relegate exception handling to addTask
+                // you must use fp and implement lazy evaluation
+                try {
+                    addTask(Todo.extractDetails(s));
+                } catch (BadAppleException be) {
+                    System.out.println(be);
+                }
                 break;
             case "deadline":
-                addTask(Deadline.extractDetails(args));
+                try {
+                    addTask(Deadline.extractDetails(args));
+                } catch (BadAppleException be) {
+                    System.out.println(be);
+                }
                 break;
             case "event":
-                addTask(Event.extractDetails(args));
+                try {
+                    addTask(Event.extractDetails(args));
+                } catch (BadAppleException be) {
+                    System.out.println(be);
+                }
                 break;
             default:
                 System.out.println("Whatcha sayin? scream 'help!' for list of my services");
